Add money transfer endpoint
